--- a/package.json
+++ b/package.json
@@ -19,7 +19,9 @@
     "@angular/forms": "~8.2.14",
     "@angular/platform-browser": "~8.2.14",
     "@angular/platform-browser-dynamic": "~8.2.14",
+    "@angular/pwa": "^0.803.19",
     "@angular/router": "~8.2.14",
+    "@angular/service-worker": "~8.2.14",
     "firebase": "^7.3.0",
     "rxjs": "~6.4.0",
     "tslib": "^1.10.0",
