--- a/angular.json
+++ b/angular.json
@@ -26,8 +26,10 @@
               "src/firebase-messaging-sw.js"
             ],
             "styles": [
-              "./node_modules/@angular/material/prebuilt-themes/indigo-pink.css",
-              "src/styles.css"
+              
+              "src/styles.css",
+              "src/theme.scss"
+
             ],
             "scripts": []
           },
